
- Use the newer ISecurityWorkflow API (pass request in to all relevant
  methods).

- Allow communities to be transitioned from private to public; show a
  warning when someone clicks the public button if the private button
  is already clicked.

- LP #404205: For the new people directory, renamed the unconfigured
  "All KARL" tab to "All".  Use peopledirectory.xml to configure it.
  Also added the ability to filter reports by user group membership.

- LP #405361: Selecting a letter in the new people directory did not
  survive pagination.

- Partial solution to LP #407017: disable autocomplete in
  admin_edit_profile.html and validate changes to home_path.

- LP #407510: Show all fields in admin_edit_profile.html.

3.6 (2009-07-23)
----------------

- Use resources rooted in "static" rather than in "static/custom";
  anything in static is allowed to be overriden.

- LP #400732: Reorganize and cleanup CSS to reduce file size and
  complexity.

- Use a start-time versioned URL for static resources.  This implies
  that the "static_postfix" setting is no longer required (the version
  number is generated and consumed by the system itself, rather than
  requiring a version number to be set in configuration).

- Use a 5 year static resource expiration time to work around browser
  caching bugs.

- Use "repoze.enformed" package to do form validation and rendering;
  "form" templates are now inlined into their constituent "real"
  templates.

- Made FakeEmailDelivery quiet by default.

- Better fault tolerance when killing processes using Python < 2.6 via
  utilities.baseconverter._ProcTimeout

- Made the name of the logo image configurable (so that it can be a PNG
  rather than a GIF).

- LP #398940, LP #398951: Added spelling checker for TinyMCE editor.  This
  requires the ``aspell`` command.  Please see the buildout README.txt for
  instructions on installing Aspell.

- Moved the ``ok.html`` and ``zodbinfo.html`` views to karl core since
  all partners need them.
